--- a/index.css
+++ b/index.css
@@ -13,7 +13,6 @@
 
 body {
   font-family: "Inconsolata", courier-std, Courier, monospace;
-  /* Alternative: "Inconsolata" */
   background-color: #080808;
   color: #f0efef;
   font-size: 18px;
@@ -23,25 +22,44 @@ body {
   margin-bottom: 40px;
 }
 
+.projects {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  -webkit-column-gap: 22px;
+          column-gap: 22px;
+  row-gap: 40px;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+}
+
 .projects h2 {
   padding-top: 18px;
 }
 
-ul {
-  padding: 0;
-  list-style-type: none;
+.projects img {
+  width: 100%;
 }
 
 p {
   max-width: 723px;
+  line-height: 1.2em;
 }
 
+img {
+  max-width: 100%;
+}
+
+/* LINKS */
 nav a {
   margin-right: 77px;
 }
 
 a {
-  text-decoration: none;
   text-decoration: underline;
   -webkit-text-decoration-style: wavy;
           text-decoration-style: wavy;
@@ -61,10 +79,20 @@ a[target="_blank"]::after {
   height: 1.1em;
 }
 
-img {
-  max-width: 100%;
+footer a {
+  display: inline-block;
+  margin-bottom: 18px;
+  text-decoration: none;
 }
 
+footer a:hover {
+  text-decoration: underline;
+  -webkit-text-decoration-style: wavy;
+          text-decoration-style: wavy;
+  text-decoration-thickness: 2px;
+}
+
+/* SPACING & ACCENTS */
 .large-block-space {
   margin-bottom: 62px;
 }
@@ -97,6 +125,7 @@ img {
   color: #57a4ff;
 }
 
+/* PROJECT SORTING */
 .hidden {
   display: none;
 }
