--- a/index.css
+++ b/index.css
@@ -60,10 +60,7 @@ nav a {
 }
 
 a {
-  text-decoration: underline;
-  -webkit-text-decoration-style: wavy;
-          text-decoration-style: wavy;
-  text-decoration-thickness: 2px;
+  text-decoration: none;
 }
 
 a[target="_blank"]::after {
@@ -85,7 +82,8 @@ footer a {
   text-decoration: none;
 }
 
-footer a:hover {
+a:hover,
+.selected {
   text-decoration: underline;
   -webkit-text-decoration-style: wavy;
           text-decoration-style: wavy;
