--- a/styles/index.scss
+++ b/styles/index.scss
@@ -15,22 +15,6 @@
 // font-style: italic; -> italic
 // font-weight: 700; -> bold
 
-// $main-font-size: 18px;
-// $large-font-size: 24px;
-// $main-text-width: 723px;
-
-// $large-space: 62px;
-// $medium-space: 40px;
-// $small-space: 18px;
-
-// $background-color: #080808;
-// $text-color: #f0efef;
-// $pink: #e225e5;
-// $red: #c90d0d;
-// $yellow: #ffd84d;
-// $blue: #57a4ff;
-// $green: #0dc941;
-
 * {
   color: inherit;
   margin: 0;
@@ -56,7 +40,7 @@ body {
   }
 }
 
-.projects {
+.projects-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
@@ -186,7 +170,6 @@ a:hover,
 .hidden {
   display: none;
 }
-
 
 // .back {
 //   color: $pink;
