--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,10 @@
   font-style: normal;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: courier-std, Courier, monospace;
   background-color: #080808;
