--- a/styles/index.scss
+++ b/styles/index.scss
@@ -26,6 +26,10 @@
   font-style: normal;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: courier-std, Courier, monospace; // Alternative: "Inconsolata"
   background-color: $background-color;
