--- a/styles/project.css
+++ b/styles/project.css
@@ -24,6 +24,10 @@ h2 {
   font-size: 24px;
 }
 
+.project-link a {
+  white-space: nowrap;
+}
+
 body {
   margin-top: 118px;
   padding-bottom: 40px;
