Add placeholder modal arrows

--- a/styles/project.css
+++ b/styles/project.css
@@ -81,4 +81,18 @@ body {
   cursor: -webkit-zoom-in;
   cursor: zoom-in;
 }
+
+.left-arrow {
+  position: fixed;
+  top: 50%;
+  left: 20px;
+  font-size: 40px;
+}
+
+.right-arrow {
+  position: fixed;
+  top: 50%;
+  right: 20px;
+  font-size: 40px;
+}
 /*# sourceMappingURL=project.css.map */
