--- a/styles/project.css
+++ b/styles/project.css
@@ -58,21 +58,37 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 1;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.75);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 3% 70px;
 }
 
-.close {
+.modal img {
+  max-height: 100%;
+}
+
+.modal .close {
   position: absolute;
   top: 20px;
   right: 40px;
   font-weight: bold;
   font-size: 60px;
+  z-index: 2;
 }
 
-.close:hover {
+.modal .close:hover {
   cursor: pointer;
   color: rgba(255, 255, 255, 0.5);
 }
@@ -82,17 +98,43 @@ body {
   cursor: zoom-in;
 }
 
-.left-arrow {
+.left-arrow,
+.right-arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   position: fixed;
-  top: 50%;
-  left: 20px;
+  height: 100%;
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
+  padding: 20px;
+  font-size: 40px;
+  background-color: rgba(0, 0, 0, 0.25);
+}
+
+.left-arrow *,
+.right-arrow * {
   font-size: 40px;
 }
 
+.left-arrow:hover,
+.right-arrow:hover {
+  cursor: pointer;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.left-arrow {
+  left: 0px;
+}
+
 .right-arrow {
-  position: fixed;
-  top: 50%;
-  right: 20px;
-  font-size: 40px;
+  right: 0px;
 }
 /*# sourceMappingURL=project.css.map */
