--- a/styles/project.css
+++ b/styles/project.css
@@ -8,6 +8,12 @@ h2 {
   margin-bottom: 40px;
 }
 
+*:focus {
+  border: 2px dashed #f0efef;
+  padding: 2px 4px;
+  text-decoration: none !important;
+}
+
 .project-subtitle {
   font-style: italic;
   margin-top: 10px;
@@ -115,7 +121,6 @@ body {
   -ms-flex-item-align: stretch;
       align-self: stretch;
   padding: 20px;
-  font-size: 40px;
   background-color: rgba(0, 0, 0, 0.25);
 }
 
@@ -136,5 +141,9 @@ body {
 
 .right-arrow {
   right: 0px;
+}
+
+button {
+  background-color: transparent;
 }
 /*# sourceMappingURL=project.css.map */
