--- a/styles/index.scss
+++ b/styles/index.scss
@@ -25,6 +25,10 @@
   font-weight: normal;
   font-style: normal;
   box-sizing: border-box;
+
+  font-family: courier-std, Courier, monospace; // Alternative: "Inconsolata"
+  color: $text-color;
+  font-size: $main-font-size;
 }
 
 html {
@@ -32,10 +36,7 @@ html {
 }
 
 body {
-  font-family: courier-std, Courier, monospace; // Alternative: "Inconsolata"
   background-color: $background-color;
-  color: $text-color;
-  font-size: $main-font-size;
   // margin: 280px 5% 4% 5%;
 
   margin: {
@@ -73,12 +74,6 @@ body {
     width: 100%;
   }
 }
-
-// For reset (if needed)
-// ul {
-//   padding: 0;
-//   list-style-type: none;
-// }
 
 p {
   max-width: $main-text-width;
@@ -121,6 +116,7 @@ footer a {
 }
 
 a:hover,
+a:focus,
 .selected,
 .back {
   text-decoration: underline;
