--- a/styles/project.scss
+++ b/styles/project.scss
@@ -10,11 +10,11 @@ h2 {
   margin-bottom: $medium-space;
 }
 
-*:focus {
-  border: 2px dashed $text-color;
-  padding: 2px 4px;
-  text-decoration: none !important;
-}
+// *:focus {
+//   border: 2px dashed $text-color;
+//   padding: 2px 4px;
+//   text-decoration: none !important;
+// }
 
 .project-subtitle {
   font-style: italic;
