--- a/styles/project.scss
+++ b/styles/project.scss
@@ -54,6 +54,7 @@ body {
   }
 }
 
+/*========== MODAL ==========*/
 .modal {
   display: none;
   position: fixed;
@@ -92,6 +93,10 @@ body {
       color: rgba(255, 255, 255, 0.5);
     }
   }
+}
+
+.slide {
+  display: none;
 }
 
 .zoomable {
