--- a/styles/project.css
+++ b/styles/project.css
@@ -73,11 +73,23 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 3% 70px;
+}
+
+.modal .slide {
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-height: 100vh;
 }
 
 .modal img {
+  display: block;
   max-height: 100%;
+  padding: 3% 70px;
 }
 
 .modal .close {
