--- a/styles/index.css
+++ b/styles/index.css
@@ -91,6 +91,15 @@ a[target="_blank"]::after {
   height: 1.1em;
 }
 
+.screenreader-text {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
 footer a {
   display: inline-block;
   margin-bottom: 18px;
