--- a/styles/index.scss
+++ b/styles/index.scss
@@ -72,6 +72,13 @@ body {
 
   img {
     width: 100%;
+    transition: 1s;
+
+    &:hover {
+      filter: invert(100%);
+      -webkit-filter: invert(100%);
+      transition: 1s;
+    }
   }
 }
 
