Add underline animation for non-gallery links

--- a/styles/_library.scss
+++ b/styles/_library.scss
@@ -9,7 +9,12 @@ $small-space: 18px;
 $background-color: #080808;
 $text-color: #f0efef;
 $pink: #e225e5;
+$pink-no-hash: "e225e5";
 $red: #c90d0d;
+$red-no-hash: "c90d0d";
 $yellow: #ffd84d;
+$yellow-no-hash: "ffd84d";
 $blue: #57a4ff;
+$blue-no-hash: "57a4ff";
 $green: #0dc941;
+$green-no-hash: "0dc941";
